Committing pre-button delivery

--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -43,8 +43,8 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<img src="assets/css/images/repup_logo2.png" width="1300" height="1300">
-							<h2>repUP</h2>
+							<img src="assets/css/images/repup_logo2.png" width="1300" height="1200">
+							<!--<h2>repUP</h2>-->
 							<!--<p>The only app <br />-->
 							<!--that helps you build <br />-->
 							<!--your  <a href="http://html5up.net">Reputation</a>.</p>-->
@@ -52,9 +52,6 @@
 								<!--<li><a href="#" class="button special">Activate</a></li>-->
 							<!--</ul>-->
 						</div>
-						<br/>
-						<br/>
-						<br/>
 						<a href="#one" class="more scrolly">Learn More</a>
 
 					</section>
@@ -136,24 +133,12 @@
 						</div>
 					</section>
 
-				<div class="box alt">
-					<div class="row uniform 50%">
-						<div class="12u"><span class="image fit"><img src="images/banner.jpg" alt="" /></span></div>
-					</div>
-				</div>
-
 				<!--&lt;!&ndash; CTA &ndash;&gt;-->
 					<section id="cta" class="wrapper style5">
 						<div class="inner">
-							<div class="12u"><span class="image fit"><img src="images/banner.jpg" alt="" /></span></div>
-							<header>
-								<h2>Begin your repUP journey now</h2>
-							</header>
-							<ul class="actions vertical">
-								<li>hello</li>
-								<li><a href="#" class="button special">Looking for a job?</a></li>
-								<li><a href="#" class="button special">Looking to have a job done?</a></li>
-							</ul>
+							<div class="6u"><a href="form.html"><span class="image fit"><img src="buttons/buttonTemp.png" alt="" class="btn-img" /></span></a></div>
+							<div class="1u"></div>
+							<div class="6u"><span class="image fit"><img src="buttons/buttonTemp.png" alt="" class="btn-img"/></span></div>
 						</div>
 					</section>
 
