--- a/backend/src/main/resources/static/form.html
+++ b/backend/src/main/resources/static/form.html
@@ -21,7 +21,7 @@
 
     <!-- Header -->
     <header id="header">
-        <h1><a href="index.html">Spectral</a></h1>
+        <h1><a href="index.html"><img src="assets/css/images/repup_logo2.png" width="10%" height="180%" style="margin-top:-1.6%"></a></h1>
         <nav id="nav">
             <ul>
                 <li class="special">
@@ -59,19 +59,19 @@
                                 <input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
                             </div>
                             <div class="6u$ 12u$(xsmall)">
-                                <input type="number" name="demo-number" id="demo-number" value="" placeholder="Phone" />
+                                <input type="email" name="demo-number" id="demo-number" value="" placeholder="Phone number" />
                             </div>
-                            <div class="12u$">
-                                <div class="select-wrapper">
-                                    <select name="demo-category" id="demo-category">
-                                        <option value="">- What sort of job? -</option>
-                                        <option value="1">Gardening</option>
-                                        <option value="1">General Repair</option>
-                                        <option value="1">Administration</option>
-                                        <option value="1">Electrician</option>
-                                    </select>
-                                </div>
-                            </div>
+                            <!--<div class="12u$">-->
+                                <!--<div class="select-wrapper">-->
+                                    <!--<select name="demo-category" id="demo-category">-->
+                                        <!--<option value="">- What sort of job? -</option>-->
+                                        <!--<option value="1">Gardening</option>-->
+                                        <!--<option value="1">General Repair</option>-->
+                                        <!--<option value="1">Administration</option>-->
+                                        <!--<option value="1">Electrician</option>-->
+                                    <!--</select>-->
+                                <!--</div>-->
+                            <!--</div>-->
                             <div class="6u$ 12u$(small)">
                                 <input type="checkbox" id="demo-human" name="demo-human" checked>
                                 <label for="demo-human">Not a robot</label>
