--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html"><img src="assets/css/images/repup_logo2.png" width="10%" height="200%" style="margin-top:-1.6%"></a></h1>
+						<h1><a href="index.html"><img src="assets/css/images/repup_logo2.png" width="10%" height="180%" style="margin-top:-1.6%"></a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -139,9 +139,9 @@
 				<!--&lt;!&ndash; CTA &ndash;&gt;-->
 					<section id="cta" class="wrapper style5">
 						<div class="inner">
-							<div class="6u"><a href="form.html"><span class="image fit"><img src="buttons/buttonTemp.png" alt="" class="btn-img" /></span></a></div>
+							<div class="6u"><a href="form.html"><span class="image fit"><img src="buttons/lookFor.png" alt="" class="btn-img" /></span></a></div>
 							<div class="1u"></div>
-							<div class="6u"><span class="image fit"><img src="buttons/buttonTemp.png" alt="" class="btn-img"/></span></div>
+							<div class="6u"><a href="form2.html"><span class="image fit"><img src="buttons/lookToDo.png" alt="" class="btn-img"/></span></a></div>
 						</div>
 					</section>
 
