--- a/backend/src/main/resources/static/form2.html
+++ b/backend/src/main/resources/static/form2.html
@@ -29,8 +29,9 @@
                     <div id="menu">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="generic.html">Generic</a></li>
-                            <li><a href="elements.html">Elements</a></li>
+                            <li><a href="tracking">Progress Tracking</a></li>
+                            <li><a href="leaderboard">Leaderboard</a></li>
+                            <li><a href="elements">Elements</a></li>
                             <li><a href="#">Sign Up</a></li>
                             <li><a href="#">Log In</a></li>
                         </ul>
