--- a/mobile/src/pages/find_a_job/find_a_job.html
+++ b/mobile/src/pages/find_a_job/find_a_job.html
@@ -16,7 +16,9 @@
           <h2>{{item.job_owner_User ? item.job_owner_User.user_name : ''}}</h2>
           <p>{{item.datePosted}}</p>
         </ion-item>
-
+        <ion-item>
+          <h3 class="title"><b>{{item.title}}</b></h3>
+        </ion-item>
         <ion-card-content>
           <p>{{item.description}}</p>
         </ion-card-content>
